--- a/proj.linux/.cproject
+++ b/proj.linux/.cproject
@@ -62,7 +62,7 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="Bump.null.192518482" name="Bump"/>
+		<project id="bump.null.192518482" name="bump"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="scannerConfiguration">
