--- a/Resources/iphone/en.plist
+++ b/Resources/iphone/en.plist
@@ -22,5 +22,11 @@
         
         <key>menu</key>
         <string>Main Menu</string>
+        
+        <key>font</key>
+        <string>Verdana-Bold</string>
+        
+        <key>font_size</key>
+        <string>30</string>
     </dict>
 </plist>
