--- a/Resources/iphone/en.plist
+++ b/Resources/iphone/en.plist
@@ -24,7 +24,7 @@
         <string>Main Menu</string>
         
         <key>font</key>
-        <string>Courier</string>
+        <string>Verdana-Bold</string>
         
         <key>font_size</key>
         <string>30</string>
